--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
  <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	 <link rel="stylesheet/less" href="css/index.less">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>	 
 	<link rel="stylesheet" href="css/index.css">
+	<!-- <link rel="stylesheet/less" href="css/index.less">
+	 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>	 --> 
 	<link rel="stylesheet" href="css/font-awesome.css">
 	
 </head>
 <body>
 	<!-- start header-->
 	<header>
+	<ul class="box-toy">
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+		<li class="toy"></li>
+	</ul>
 		<h1>ALIEN WORLD</h1><br>
 		<small>(c)Alexandr Petrikov</small><br>
 		<div class="currentHours">
@@ -28,10 +40,26 @@
 	<main>
 
 		<div class="work-block" id="work-block">
-				<form class="identification" id="identification" action="php/names.php">
-					<input type="text" required placeholder="Your name"><br>
-					<input type="submit" value="START">
-				</form>
+			<div class="column-group">
+				<div class="one-column column">
+					<ul class="one-result" id="one-result">
+						<li id="one-res-realise">1</li>
+					</ul>
+				</div>
+				<div class="two-column column">
+					<ul class="two-result" id="two-result">
+						<li id="two-res-realise">1</li>
+					</ul>
+				</div>
+				<div class="three-column column">
+					<ul class="three-result" id="three-result">
+						<li id="three-res-realise">1</li>
+					</ul>
+				</div>
+			</div>
+			<div class="cost">
+				Your zen: <label id="zen" class="zen">100</label>
+			</div>
 		</div>
 		<div class="control-menu">
 			<div class="gb-name">
@@ -40,18 +68,26 @@
 			<div class="new-game" id="new-game">
 				<p>New game</p>
 			</div>
+			<div class="start-game" id="start-game">
+				<p>Start</p>
+			</div>
+			<div class="stop-auto" id="stop-auto">
+				<p>Stop</p>
+			</div>
 			<div class="sign-up">
 				<p>Sign up</p>
 			</div>
 			<div class="sign-in">
 				<p>Sign in</p>
 			</div>
-			<div class="about-game">
+			<div id="about-game" class="about-game">
 				<p>About game</p>
 			</div>
+			<label id="coordPage"></label>
 	</main>
 	<!-- end main-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="js/numBox.js"></script>
 	<script src="js/index.js"></script>
 </body>
 </html>
